--- a/app/src/main/res/drawable/headershape.xml
+++ b/app/src/main/res/drawable/headershape.xml
@@ -4,7 +4,7 @@
     android:bottomLeftRadius="15dp"
     android:bottomRightRadius="150dp"></corners>
     <solid
-        android:color="@color/LightBlue"></solid>
+        android:color="@color/app_light_blue"></solid>
     <stroke
         android:width="1dp"
         android:color="@color/black"></stroke>
